--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -1715,6 +1715,11 @@
             x,y=28,24
             side=4
         [/capture_village]
+        
+        [capture_village]
+            x,y=35,27
+            side=4
+        [/capture_village]
 
         [capture_village]
             x,y=35,27
