Fix building with Xcode 10 (#3460)
Resolves #3458.

(cherry-picked from commit 50301f84e33d828c39835bc47f04dd1107631960)

--- a/projectfiles/VC14/wesnoth.vcxproj.filters
+++ b/projectfiles/VC14/wesnoth.vcxproj.filters
@@ -605,9 +605,6 @@
     <ClCompile Include="..\..\src\gui\dialogs\game_ui.cpp">
       <Filter>Gui\Dialogs</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\gui\dialogs\game_version.cpp">
-      <Filter>Gui\Dialogs</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\gui\dialogs\gamestate_inspector.cpp">
       <Filter>Gui\Dialogs</Filter>
     </ClCompile>
@@ -1115,7 +1112,7 @@
     <ClCompile Include="..\..\src\tests\utils\fake_event_source.cpp">
       <Filter>Tests\Utils</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\tests\utils\game_config_manager.cpp">
+    <ClCompile Include="..\..\src\tests\utils\game_config_manager_tests.cpp">
       <Filter>Tests\Utils</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\tests\utils\play_scenario.cpp">
@@ -1456,7 +1453,7 @@
     <ClCompile Include="..\..\src\generic_event.cpp" />
     <ClCompile Include="..\..\src\halo.cpp" />
     <ClCompile Include="..\..\src\hash.cpp" />
-    <ClCompile Include="..\..\src\image.cpp" />
+    <ClCompile Include="..\..\src\picture.cpp" />
     <ClCompile Include="..\..\src\image_modifications.cpp" />
     <ClCompile Include="..\..\src\joystick.cpp" />
     <ClCompile Include="..\..\src\key.cpp" />
@@ -1495,7 +1492,7 @@
     <ClCompile Include="..\..\src\saved_game.cpp" />
     <ClCompile Include="..\..\src\savegame.cpp" />
     <ClCompile Include="..\..\src\seed_rng.cpp" />
-    <ClCompile Include="..\..\src\settings.cpp" />
+    <ClCompile Include="..\..\src\map_settings.cpp" />
     <ClCompile Include="..\..\src\show_dialog.cpp" />
     <ClCompile Include="..\..\src\side_filter.cpp" />
     <ClCompile Include="..\..\src\sound.cpp" />
@@ -1567,6 +1564,9 @@
     </ClCompile>
     <ClCompile Include="..\..\src\preferences\lobby.cpp">
       <Filter>Preferences</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\gui\dialogs\game_version_dialog.cpp">
+      <Filter>Gui\Dialogs</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2030,9 +2030,6 @@
       <Filter>Gui\Dialogs</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\gui\dialogs\game_ui.hpp">
-      <Filter>Gui\Dialogs</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\gui\dialogs\game_version.hpp">
       <Filter>Gui\Dialogs</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\gui\dialogs\gamestate_inspector.hpp">
@@ -2900,7 +2897,7 @@
     <ClInclude Include="..\..\src\global.hpp" />
     <ClInclude Include="..\..\src\halo.hpp" />
     <ClInclude Include="..\..\src\hash.hpp" />
-    <ClInclude Include="..\..\src\image.hpp" />
+    <ClInclude Include="..\..\src\picture.hpp" />
     <ClInclude Include="..\..\src\image_modifications.hpp" />
     <ClInclude Include="..\..\src\joystick.hpp" />
     <ClInclude Include="..\..\src\key.hpp" />
@@ -2943,7 +2940,7 @@
     <ClInclude Include="..\..\src\savegame.hpp" />
     <ClInclude Include="..\..\src\savegame_config.hpp" />
     <ClInclude Include="..\..\src\seed_rng.hpp" />
-    <ClInclude Include="..\..\src\settings.hpp" />
+    <ClInclude Include="..\..\src\map_settings.hpp" />
     <ClInclude Include="..\..\src\show_dialog.hpp" />
     <ClInclude Include="..\..\src\side_filter.hpp" />
     <ClInclude Include="..\..\src\sound.hpp" />
@@ -2966,7 +2963,7 @@
     <ClInclude Include="..\..\src\variable_info.hpp" />
     <ClInclude Include="..\..\src\variable_info_detail.hpp" />
     <ClInclude Include="..\..\src\variable_info_private.hpp" />
-    <ClInclude Include="..\..\src\version.hpp" />
+    <ClInclude Include="..\..\src\game_version.hpp" />
     <ClInclude Include="..\..\src\video.hpp" />
     <ClInclude Include="..\..\src\wesconfig.h" />
     <ClInclude Include="..\..\src\wesnothd_connection.hpp" />
@@ -3052,6 +3049,9 @@
     <ClInclude Include="..\..\src\terrain\movement.hpp">
       <Filter>Terrain</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\gui\dialogs\game_version_dialog.hpp">
+      <Filter>Gui\Dialogs</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\src\tests\test_sdl_utils.hpp">
@@ -3066,7 +3066,7 @@
     <CustomBuild Include="..\..\src\tests\utils\fake_event_source.hpp">
       <Filter>Tests\Utils</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\..\src\tests\utils\game_config_manager.hpp">
+    <CustomBuild Include="..\..\src\tests\utils\game_config_manager_tests.hpp">
       <Filter>Tests\Utils</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\tests\utils\play_scenario.hpp">
