--- a/data/campaigns/Dead_Water/scenarios/01_Invasion.cfg
+++ b/data/campaigns/Dead_Water/scenarios/01_Invasion.cfg
@@ -623,7 +623,7 @@
         [/message]
         [message]
             speaker=Gwabbo
-            message= _ "Good work Kai, if I may say so."
+            message= _ "Good work, Kai, if I may say so."
         [/message]
     [/event]
 
