--- a/data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg
@@ -416,6 +416,7 @@ end
                     [then]
                         [message]
                             speaker=Uncle Somf
+                            # po: The addressed person is the speaker's niece or nephew.
                             message= _ "$outlaw_name|! How have you been? I haven’t seen you in years."
                         [/message]
                     [/then]
@@ -423,6 +424,7 @@ end
                     [else]
                         [message]
                             speaker=Uncle Somf
+                            # po: The mentioned person, $outlaw_name, is the speaker's niece or nephew.
                             message= _ "Haw! Any friend of $outlaw_name is a friend of mine too."
                         [/message]
                     [/else]
@@ -483,6 +485,7 @@ end
 
         [message]
             speaker=Uncle Somf
+            # po: The addressed person is the speaker's niece or nephew.
             message= _ "How are we doing, $outlaw_name|?"
         [/message]
         [message]
