--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg
@@ -369,7 +369,7 @@
 
         [message]
             speaker=Angarthing
-            message= _ "They were seeking captives. To what purpose, I cannot say. But I doubt it was any good one."
+            message= _ "They were seeking captives. To what purpose, I cannot say, but I doubt it was any good one."
         [/message]
 
         [kill]
