--- a/data/core/about_i18n.cfg
+++ b/data/core/about_i18n.cfg
@@ -1714,6 +1714,7 @@ sort=yes
 [/about]
 
 [about]
+    # po: Real Acadèmia de Cultura Valenciana
     title = _"RACV’s Translation" # wmllint: no spellcheck
     [entry]
         name = "Mario Rodríguez (Mavorte)"
