--- a/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
@@ -14,7 +14,7 @@
     {EXTRA_SCENARIO_MUSIC loyalists.ogg}
     {EXTRA_SCENARIO_MUSIC suspense.ogg}
 
-    # No storyl; this occurs immediately after the previous scenario
+    # No story; this occurs immediately after the previous scenario
 
     # wmllint: validate-off
     [side]
