--- a/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
@@ -13,7 +13,7 @@
     {SCENARIO_MUSIC       the_city_falls.ogg}
     {EXTRA_SCENARIO_MUSIC the_king_is_dead.ogg}
 
-    # No storyl; this occurs immediately after the previous scenario
+    # No story; this occurs immediately after the previous scenario
 
     # wmllint: validate-off
     [side]
