--- a/data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg
+++ b/data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg
@@ -489,12 +489,12 @@ Yet for some reason I fear these brothers more. If Mordak were here it would be 
 
         [message]
             speaker=Knago-Brek
-            message= _ "Haha! We not kill people for long time. Weapon wants blood. We now kill humans!!"
+            message= _ "Haha! We not kill people for long time. Weapon wants blood. We now kill humans!"
         [/message]
 
         [message]
             speaker=Arvith
-            message= _ "My sword-arm has a say in who will do the dying. Come on, men, let’s kill some orcs."
+            message= _ "My sword-arm shall have a say in who will do the dying. Come on, men, let’s kill some orcs."
         [/message]
     [/event]
 
