--- a/data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg
@@ -339,7 +339,7 @@
         [/message]
         [message]
             speaker=Konrad
-            message= _ "Aimucasur? So you know of this Lich-Lord? Did you know him? He was a powerful mage?"
+            message= _ "Aimucasur? So you know of this Lich-Lord? Did you know him? Was he a powerful mage?"
         [/message]
         [message]
             speaker=Delfador
