--- a/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg
@@ -336,7 +336,7 @@
                 [message]
                     speaker=Konrad
                     {KONRAD_VARIATION concerned}
-                    message= _ "Hold your tongue, Kalenz. The princess is our ally and of royal blood. She deserves not your disrespect."
+                    message= _ "Hold your tongue, Kalenz. The Princess is our ally and of royal blood. She deserves not your disrespect."
                 [/message]
                 [message]
                     speaker=Kalenz
