--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg
@@ -327,7 +327,7 @@
 
         [message]
             speaker=Angarthing
-            message=_"A runemaster? There had been none such since Thursagan’s day. And for one to lead a holding was unheard-of; they tended towards the solitary life."
+            message=_"A runemaster? There have been none such since Thursagan’s day. And for one to lead a holding was unheard-of; they tended towards the solitary life."
         [/message]
 
         [message]
@@ -352,7 +352,7 @@
 
         [message]
             speaker=Dulcatulos
-            message=_"That’s for lords and loremasters to worry about, not the likes of me. I must see to my troop’s care. Food will be brought to you; rest well, we will speak again."
+            message=_"That’s for lords and loremasters to worry about, not the likes of me. I must see to my troop’s care. Food will be brought to you; rest well. We will speak again."
         [/message]
 
         [endlevel]
