--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -78,6 +78,8 @@
 			<Add library="libboost_zlib-mgw51-mt-1_64" />
 			<Add library="libcrypto-1_1" />
 			<Add library="winmm" />
+			<Add library="libole32" />
+			<Add library="libuuid" />
 			<Add directory="./" />
 		</Linker>
 		<Unit filename="../../packaging/windows/wesnoth.rc">
@@ -86,7 +88,7 @@
 		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.h" />
+		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.h"/>
 		<Unit filename="../../src/about.cpp" />
 		<Unit filename="../../src/about.hpp" />
 		<Unit filename="../../src/actions/advancement.cpp" />
@@ -242,14 +244,6 @@
 		<Unit filename="../../src/cursor.hpp" />
 		<Unit filename="../../src/deprecation.cpp" />
 		<Unit filename="../../src/deprecation.hpp" />
-		<Unit filename="../../src/desktop/apple_battery_info.mm" />
-		<Unit filename="../../src/desktop/apple_battery_info.hpp" />
-		<Unit filename="../../src/desktop/apple_notification.mm" />
-		<Unit filename="../../src/desktop/apple_notification.hpp" />
-		<Unit filename="../../src/desktop/apple_version.mm" />
-		<Unit filename="../../src/desktop/apple_version.hpp" />
-		<Unit filename="../../src/desktop/battery_info.cpp" />
-		<Unit filename="../../src/desktop/battery_info.hpp"/>
 		<Unit filename="../../src/desktop/clipboard.cpp" />
 		<Unit filename="../../src/desktop/clipboard.hpp" />
 		<Unit filename="../../src/desktop/notifications.cpp" />
@@ -260,8 +254,6 @@
 		<Unit filename="../../src/desktop/paths.hpp" />
 		<Unit filename="../../src/desktop/version.cpp" />
 		<Unit filename="../../src/desktop/version.hpp" />
-		<Unit filename="../../src/desktop/windows_battery_info.cpp" />
-		<Unit filename="../../src/desktop/windows_battery_info.hpp" />
 		<Unit filename="../../src/desktop/windows_tray_notification.cpp" />
 		<Unit filename="../../src/desktop/windows_tray_notification.hpp" />
 		<Unit filename="../../src/display.cpp" />
@@ -343,8 +335,6 @@
 		<Unit filename="../../src/filesystem_sdl.cpp" />
 		<Unit filename="../../src/floating_label.cpp" />
 		<Unit filename="../../src/floating_label.hpp" />
-		<Unit filename="../../src/floating_textbox.cpp" />
-		<Unit filename="../../src/floating_textbox.hpp" />
 		<Unit filename="../../src/font/constants.cpp" />
 		<Unit filename="../../src/font/constants.hpp" />
 		<Unit filename="../../src/font/font_config.cpp" />
@@ -487,8 +477,6 @@
 		<Unit filename="../../src/gui/auxiliary/iterator/walker_tree_node.hpp" />
 		<Unit filename="../../src/gui/auxiliary/iterator/walker_widget.cpp" />
 		<Unit filename="../../src/gui/auxiliary/iterator/walker_widget.hpp" />
-		<Unit filename="../../src/gui/auxiliary/old_markup.cpp" />
-		<Unit filename="../../src/gui/auxiliary/old_markup.hpp" />
 		<Unit filename="../../src/gui/auxiliary/tips.cpp" />
 		<Unit filename="../../src/gui/auxiliary/tips.hpp" />
 		<Unit filename="../../src/gui/auxiliary/typed_formula.hpp" />
@@ -547,6 +535,7 @@
 		<Unit filename="../../src/gui/dialogs/chat_log.cpp" />
 		<Unit filename="../../src/gui/dialogs/chat_log.hpp" />
 		<Unit filename="../../src/gui/dialogs/core_selection.cpp" />
+		<Unit filename="../../src/gui/dialogs/core_selection.hpp" />
 		<Unit filename="../../src/gui/dialogs/debug_clock.cpp" />
 		<Unit filename="../../src/gui/dialogs/debug_clock.hpp" />
 		<Unit filename="../../src/gui/dialogs/depcheck_confirm_change.cpp" />
@@ -601,9 +590,10 @@
 		<Unit filename="../../src/gui/dialogs/gamestate_inspector.hpp" />
 		<Unit filename="../../src/gui/dialogs/help_browser.cpp" />
 		<Unit filename="../../src/gui/dialogs/help_browser.hpp" />
-		<Unit filename="../../src/gui/dialogs/helper.hpp" />
 		<Unit filename="../../src/gui/dialogs/hotkey_bind.cpp" />
 		<Unit filename="../../src/gui/dialogs/hotkey_bind.hpp" />
+		<Unit filename="../../src/gui/dialogs/ingame_ui_base.cpp" />
+		<Unit filename="../../src/gui/dialogs/ingame_ui_base.hpp" />
 		<Unit filename="../../src/gui/dialogs/label_settings.cpp" />
 		<Unit filename="../../src/gui/dialogs/label_settings.hpp" />
 		<Unit filename="../../src/gui/dialogs/language_selection.cpp" />
@@ -810,8 +800,6 @@
 		<Unit filename="../../src/help/constants.hpp" />
 		<Unit filename="../../src/help/help.cpp" />
 		<Unit filename="../../src/help/help.hpp" />
-		<Unit filename="../../src/help/help_text_area.cpp" />
-		<Unit filename="../../src/help/help_text_area.hpp" />
 		<Unit filename="../../src/help/manager.cpp" />
 		<Unit filename="../../src/help/manager.hpp" />
 		<Unit filename="../../src/help/section.cpp" />
@@ -1029,6 +1017,8 @@
 		<Unit filename="../../src/sdl/window.hpp" />
 		<Unit filename="../../src/seed_rng.cpp" />
 		<Unit filename="../../src/seed_rng.hpp" />
+		<Unit filename="../../src/serialization/base64.cpp" />
+		<Unit filename="../../src/serialization/base64.hpp" />
 		<Unit filename="../../src/serialization/binary_or_text.cpp" />
 		<Unit filename="../../src/serialization/binary_or_text.hpp" />
 		<Unit filename="../../src/serialization/compression.hpp" />
@@ -1051,8 +1041,6 @@
 		<Unit filename="../../src/serialization/validator.hpp" />
 		<Unit filename="../../src/map_settings.cpp" />
 		<Unit filename="../../src/map_settings.hpp" />
-		<Unit filename="../../src/show_dialog.cpp" />
-		<Unit filename="../../src/show_dialog.hpp" />
 		<Unit filename="../../src/side_filter.cpp" />
 		<Unit filename="../../src/side_filter.hpp" />
 		<Unit filename="../../src/sound.cpp" />
@@ -1206,17 +1194,6 @@
 		<Unit filename="../../src/whiteboard/utility.cpp" />
 		<Unit filename="../../src/whiteboard/utility.hpp" />
 		<Unit filename="../../src/whiteboard/visitor.hpp" />
-		<Unit filename="../../src/widgets/button.cpp" />
-		<Unit filename="../../src/widgets/button.hpp" />
-		<Unit filename="../../src/widgets/menu.cpp" />
-		<Unit filename="../../src/widgets/menu.hpp" />
-		<Unit filename="../../src/widgets/menu_style.cpp" />
-		<Unit filename="../../src/widgets/scrollarea.cpp" />
-		<Unit filename="../../src/widgets/scrollarea.hpp" />
-		<Unit filename="../../src/widgets/scrollbar.cpp" />
-		<Unit filename="../../src/widgets/scrollbar.hpp" />
-		<Unit filename="../../src/widgets/textbox.cpp" />
-		<Unit filename="../../src/widgets/textbox.hpp" />
 		<Unit filename="../../src/widgets/widget.cpp" />
 		<Unit filename="../../src/widgets/widget.hpp" />
 		<Unit filename="../../src/wml_exception.cpp" />
