--- a/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
@@ -117,19 +117,15 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Commander! I took your message to the council, and your deeds have pleased them. Are the undead finally gone from our lands?"
+            message= _ "Deoran, you have returned! I took your message to the council, and we have begun to fortify the villages and borders against any attacks from the bandits or undead. How did you fare against the lich?"
         [/message]
         [message]
             speaker=Deoran
-            message= _ "The undead are gone! Perhaps now there will be peace for a time in Westin. You have our thanks Lady Ethiliel."
+            message= _ "We have defeated him. Perhaps now there will be peace in Westin. You have our thanks, Lady Ethiliel. We could not have accomplished this feat without you."
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "Though the undead are vanquished, they have brought us much sorrow. Deoran, your people have restored their honor. Let us part in peace."
-        [/message]
-        [message]
-            speaker=Deoran
-            message= _ "Indeed. Neither the bandits nor the undead will trouble us for some time. We will tend our wounds and you yours."
+            message= _ "Yes... you have done a great deed in destroying the undead, but it was others of your kind that brought about this evil to begin with. Nevertheless, I see now that not all humans are alike and that you, too, are capable of courage and loyalty. About the trouble with my people, I will see what I can do—"
         [/message]
         [message]
             speaker=narrator
@@ -162,15 +158,15 @@
         [/unit]
         [message]
             speaker=Ithelden
-            message= _ "You must pay for killing Mebrin!"
+            message= _ "You will pay for the death of Mebrin!"
         [/message]
         [message]
             speaker=Poor Farmer
-            message= _ "I am just a farmer! What did I do?!"
+            message= _ "I am just a farmer! I never killed anyone!"
         [/message]
         [message]
             speaker=Ithelden
-            message= _ "What did you do?! Your people kidnapped and murdered our greatest leader! And now you will pay!"
+            message= _ "You lie! All humans are the same! Your people kidnapped and murdered our wisest sage! Now you will pay!"
         [/message]
         [color_adjust]
             red=255
@@ -195,11 +191,19 @@
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "Stop, Ithelden! I have traveled with these humans, and they are not the ones who harmed Mebrin. They are our allies!"
+            message= _ "Stop, Ithelden! These humans are not the ones who harmed Mebrin. They have helped me obtain vengeance on the ones responsible for the horrible deed and have thus absolved themselves of any wrongdoing. No more innocent blood needs to be shed."
         [/message]
         [message]
             speaker=Ithelden
-            message= _ "You too, Ethiliel? All these humans are the same! They fell trees to till the earth; now they have felled our leader! We cannot brook such deeds! You will die with them!"
+            message= _ "I can hardly believe my ears. You have always been too soft, Ethiliel, but to side with the humans? All humans are scum and vermin! Just as they have felled our trees in the past, they have destroyed our homes, murdered our people, and killed Mebrin!"
+        [/message]
+        [message]
+            speaker=Ethiliel
+            message= _ "Mebrin was my master, Ithelden! It is <i>I</i> who grieves the most! I have spent countless, sleepless nights thinking about his death and missing him so dearly that my heart never ceases to ache. You know how I must feel about losing one that I cherished so. Still... still, even I recognize that these humans are not the ones to blame."
+        [/message]
+        [message]
+            speaker=Ithelden
+            message= _ "It matters not. The humans have spilled the blood of our people, and so theirs will be spilled in turn. If you stand against us, Ethiliel, we will attack you too. You had best stay out of this."
         [/message]
 
         [music]
@@ -232,15 +236,15 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "We won’t be able to hold them off for long. I should go reason with them!"
+            message= _ "Ever the stubborn one. Deoran, we will not be able to fight them for very long. I need to go reason with Ithelden, but you need to protect me until I can reach him. Do you think you can do that?"
         [/message]
         [message]
             speaker=Deoran
-            message= _ "Are you sure that the elves will greet you any more kindly than they have met us? After all, you did lead us into the forests..."
+            message= _ "I will do my very best, but are you sure that he will greet you any more kindly than he has met us? He just threatened to kill you."
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "Perhaps not, but it is your only hope. I must reach Ithelden!"
+            message= _ "Perhaps not, but I am your only hope. Protect me until I reach Ithelden!"
         [/message]
 
         {SET_LABEL 6 15 _"Ithelden’s base"}
@@ -326,7 +330,7 @@
         [role]
             role=realist
             side=1
-            type="Mage of Light,White Mage," +
+            type="Mage of Light,White Mage," +
                 "Infantry Commander,Infantry Lieutenant," +
                 "Cavalier,Halberdier,Royal Guard,Master Bowman,Iron Mauler," +
                 "Javelineer,Longbowman,Pikeman,Swordsman,Dragoon,Shock Trooper," +
@@ -336,11 +340,11 @@
         [/role]
         [message]
             role=realist
-            message= _ "Ithelden’s elves have killed Ethiliel! Now we have no chance to come to an agreement with them. A war with the Elves is imminent."
+            message= _ "They have killed Ethiliel! Now we have no chance to come to an agreement with them. A war with the elves is imminent."
         [/message]
         [message]
             speaker=Deoran
-            message= _ "We are far away from Weldyn. We’ll surely all be killed long before any reinforcements arrive."
+            message= _ "Alas, we are far away from Weldyn. We will surely all be killed long before any reinforcements arrive."
         [/message]
 
         [endlevel]
@@ -357,13 +361,29 @@
             y=15
         [/filter]
 
-        # Added a delay too make the end of the campaign less abrupt; maybe some dialogue is better
+        [message]
+            speaker=Ethiliel
+            message= _ "Ithelden! Ithelden, I know you are there. Answer me! Stop hiding from me!"
+        [/message]
+        [delay]
+            time=2000
+        [/delay]
+        [message]
+            speaker=Ethiliel
+            message= _ "I hoped that it would not come to this, but you leave me no choice."
+        [/message]
+        
         [sound]
             name=magic-faeriefire.ogg
         [/sound]
         [delay]
-            time=2000
+            time=1500
         [/delay]
+        [kill]
+            id=Ethiliel
+            animate=no
+            fire_event=no
+        [/kill]
 
         [endlevel]
             result=victory
@@ -377,7 +397,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "Take care, Deoran! My people are upset. Killing one will only draw more."
+            message= _ "Be careful, Deoran. The more blood you spill, the more my people will be enraged. More will surely come to attack."
         [/message]
     [/event]
 [/scenario]
