--- a/data/campaigns/The_South_Guard/units/Horseman_Commander.cfg
+++ b/data/campaigns/The_South_Guard/units/Horseman_Commander.cfg
@@ -22,7 +22,7 @@
     [abilities]
         {ABILITY_LEADERSHIP}
     [/abilities]
-    description= _ "Leaders of the border guards, mounted commanders are trained not only to ride and fight, but to lead. They command the garrisons that keep peace in the provinces of Wesnoth."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_CHARGE}
+    description= _ "Leaders of the border guards, mounted commanders command the garrisons that keep peace in the outermost provinces of Wesnoth. As effective leaders and powerful warriors, these men patrol the countryside and eliminate any and all threats to peace in the frontier villages."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_CHARGE}
     die_sound=horse-die.ogg
     [attack]
         name=lance
