--- a/data/campaigns/The_South_Guard/units/Junior_Commander.cfg
+++ b/data/campaigns/The_South_Guard/units/Junior_Commander.cfg
@@ -22,7 +22,7 @@
     [abilities]
         {ABILITY_LEADERSHIP}
     [/abilities]
-    description= _ "Scarcely 17 or 18 years old, the sons of knights and lords were given mounts and swords and told to become leaders of men. Those whose mettle was strong enough for the task became the commanders of the armies of Wesnoth."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}
+    description= _ "At scarcely 17 or 18 years of age, squires are not yet full knights, but still have the knowledge and skill to master their mounts whilst in full panolpy. Talented squires are sometimes given command of small units in Wesnoth' s army, where they gain experience leading fellow troops and honing their prowess in battle."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}
     die_sound=horse-die.ogg
     [attack]
         name=spear
