--- a/data/campaigns/The_South_Guard/units/Mounted_General.cfg
+++ b/data/campaigns/The_South_Guard/units/Mounted_General.cfg
@@ -23,7 +23,7 @@
     [abilities]
         {ABILITY_LEADERSHIP}
     [/abilities]
-    description= _ "Being the most able leaders of the border guards, Mounted Generals are trained not only to ride and fight, but to lead. They command the garrisons that keep peace in the provinces of Wesnoth."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_CHARGE}
+    description= _ "Switching seamlessly between lance and mace, mounted generals boast tremendous skill in individual combat and can hold their own against even the most powerful opposition. They are masters of their mounts, able to cover great distances quickly on their patrols, and have keen eyes for detecting and eliminating all manner of perilous dangers. Their greatest strength, however, lies in their ability to inspire great courage in their men, who fight fearlessly and tenaciously under their command."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_CHARGE}
     die_sound=horse-die.ogg
     [attack]
         name=lance
