TSG: Story and dialogue revisions
Closes #3597

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -473,7 +473,7 @@ _f, _f, Re, _f
 
         [message]
             speaker=narrator
-            message= _ "Deoran and Urza Afalas led their men quickly from Mebrin’s fortress..."
+            message= _ "Deoran and Urza Afalas retreated quickly from Mebrin's fortress..."
             image=wesnoth-icon.png
         [/message]
 
@@ -492,34 +492,34 @@ _f, _f, Re, _f
 
         [message]
             speaker=Deoran
-            message= _ "Will this forest ever end? How can we know what path to take?!"
+            message= _ "Forest, forest, forest! As far as the eye can see, it is all forest! I am getting sick of endlessly trudging through these woods. Are you sure you are taking us in the right direction?"
         [/message]
         [message]
             speaker=Urza Afalas
-            message= _ "You have to follow me! I have often traveled these woods avoiding the elves with my comrades, and I know a secret path through it."
+            message= _ "Trust me. I have often traveled these woods with my comrades and I know a secret path through it. I am taking you there so we can avoid the elves on the way back."
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "Would that I had listened to Ethiliel... we would be battling the undead by now, instead of crawling around in these woods like rats!"
         [/message]
         [message]
             speaker=Sir Gerrick
-            message= _ "Can we trust him? His people are murderers and thieves!"
+            message= _ "What's done is done. We must worry about the task at hand. Winter is almost upon us and it will be much more difficult to forage for food then."
         [/message]
         [message]
             speaker=Minister Hylas
-            message= _ "Do we have any choice? Our food is running out, and it will be winter soon..."
-        [/message]
-        [message]
-            speaker=Minister Hylas
-            message= _ "Beware! I sense that there are many undead creatures chasing us. We should move quickly."
+            message= _ "That is not our only problem. I sense that many undead creatures are approaching us rapidly. It seems as if they are chasing us, though I know not why."
         [/message]
         [message]
             speaker=Urza Afalas
-            message= _ "Let us go quickly, then. I will show you the way."
+            message= _ "It must be because we destroyed that phantom lich. The corrupted sage is sending them to hunt us in retaliation. Let's get out of here quickly so we won't have to fight them."
         [/message]
 
         {MOVE_UNIT (id=Urza Afalas) 18 35}
 
         [message]
             speaker=Urza Afalas
-            message= _ "Remember that these woods are crawling with elves, and I don’t think they’ll receive us too kindly. Stay on the path and perhaps we can avoid at least most of them."
+            message= _ "Ah, also, remember that these woods are crawling with elves. Stay on the path and perhaps we can avoid at least most of them. If we do get seen, well, let's hope they won't attack us."
         [/message]
 
         [objectives]
@@ -819,7 +819,7 @@ _f, _f, Re, _f
             [then]
                 [message]
                     speaker=Urza Afalas
-                    message= _ "From here you can see the banks of the river! Across it we will find the sun again, and an end to these cursed trees!"
+                    message= _ "You can see the banks of the river from here!"
                 [/message]
             [/then]
         [/if]
@@ -873,11 +873,11 @@ _f, _f, Re, _f
                     x,y=$x1,$y1
                 [/filter_adjacent_location]
             [/filter_location]
-            message= _"You humans have kidnapped Mebrin the Sage. You will pay for your crimes."
+            message= _"Humans! You are the curs who kidnapped the Sage Mebrin! Tell us where you have hidden him and perhaps we will grant you a quick death!"
         [/message]
         [message]
             id=Deoran
-            message= _"Your sage Mebrin is the criminal. He practices necromancy and now commands an army of undead. By the laws of Wesnoth, the punishment for his crimes is death!"
+            message= _"We have already told you of his whereabouts! Your wise sage now practices necromancy and commands an army of undead. He means to march on our land and slay all living souls, human and elf alike!"
         [/message]
         [message]
             race=elf
@@ -886,7 +886,20 @@ _f, _f, Re, _f
                     x,y=$x1,$y1
                 [/filter_adjacent_location]
             [/filter_location]
-            message= _"It is you who is a criminal and who is in a company of criminals. We will not let you kill Mebrin!"
+            message= _"How dare you speak of Mebrin with such lies?! Though he has knowledge of the undead, he is no human, so easily corrupted by the temptation of such power. Did you think that you could fool us with such a fictitious story?"
+        [/message]
+        [message]
+            id=Deoran
+            message= _"We are not lying! If you travel south and enter the undead lair, you see that we speak the truth!"
+        [/message]
+        [message]
+            race=elf
+            [filter_location]
+                [filter_adjacent_location]
+                    x,y=$x1,$y1
+                [/filter_adjacent_location]
+            [/filter_location]
+            message= _"Enough! I should have known that the stupidity of humans knows no bounds. We have nothing more to say here."
         [/message]
 
         [event]
@@ -920,11 +933,11 @@ _f, _f, Re, _f
                         x,y=$x1,$y1
                     [/filter_adjacent_location]
                 [/filter_location]
-                message= _ "We cannot allow you bandits and criminals to pass through our lands!"
+                message= _ "Humans, bandits and abductors! Prepare to be slain!"
             [/message]
             [message]
-                speaker=Urza Afalas
-                message= _ "We wish only to return to our homes!"
+                speaker=Sir Gerrick
+                message= _ "We don't want to fight you! We wish only to return to our homes!"
             [/message]
             [message]
                 race=elf
@@ -933,7 +946,11 @@ _f, _f, Re, _f
                         x,y=$x1,$y1
                     [/filter_adjacent_location]
                 [/filter_location]
-                message= _ "Nevertheless, we will have vengeance for Mebrin!!"
+                message= _ "And so does our Sage Mebrin, yet you have not returned him to us! Even if you did, we would still dispatch of you for your heinous transgressions, you treacherous scum!"
+            [/message]
+            [message]
+                speaker=Urza Afalas
+                message= _ "There is no reasoning with the elves. We will either have to fight or run."
             [/message]
 
             [event]
@@ -1109,7 +1126,7 @@ _f, _f, Re, _f
         [/filter]
         [message]
             speaker=unit
-            message= _ "Now I pay for my crimes. But how many others will also suffer for them?"
+            message= _ "I pay for my crimes, but without me, you will never make it back to Kerlath..."
         [/message]
         [kill]
             x,y=$x1,$y1
@@ -1136,21 +1153,19 @@ _f, _f, Re, _f
         [/filter]
         [message]
             speaker=Deoran
-            message= _ "Thank heaven we have escaped that awful forest!"
-        [/message]
-        [message]
-            speaker=Sir Gerrick
-            message= _ "Indeed, Afalas, you’ve earned my trust today."
+            message= _ "At last, we have escaped that awful forest! It seems that you actually kept your word about something, Afalas."
         [/message]
         [message]
             speaker=Urza Afalas
-            message= _ "I can only hope for mercy when I return to Westin."
+            message= _ "Good knight, I am not evil as you think I am. I really do mean to aid in your battle against the undead. I am sorry for my deception before, but that was truly only because I thought you would kill me!"
         [/message]
-
         [message]
-            speaker=narrator
-            message= _ "But there was a dark cloud looming behind Deoran and his men..."
-            image=wesnoth-icon.png
+            speaker=Sir Gerrick
+            message= _ "Your past crimes are not easy to overlook, but we will see how you aid us in the coming battle. As Sir Deoran said, you have kept your word about leading us back to Wesnoth, and that is a good start."
+        [/message]
+        [message]
+            speaker=Urza Afalas
+            message= _ "Thank you. I will help you as much as I can when we return to Westin."
         [/message]
 
         {CLEAR_VARIABLE secret_path}
