THoT S5: Unhide the villagers side once they appear.

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg
@@ -152,6 +152,7 @@
     # The bandit indigenes
     [side]
         side=5
+        user_team_name= _ "Villagers"
         no_leader=yes
         hidden=yes
         {FLAG_VARIANT6 ragged}
@@ -323,6 +324,16 @@
                         x,y=$x1,$y1
                     [/primary_unit]
                 [/fire_event]
+                # Show the bandits in the status table so the player can tell which enemies play first.
+                [if]
+                    {VARIABLE_CONDITIONAL indigs greater_than 0}
+                    [then]
+                        [modify_side]
+                            side=5
+                            hidden=no
+                        [/modify_side]
+                    [/then]
+                [/if]
             [/then]
         [/spawn_units]
 
